FreeST/test/Programs/InvalidTests/Modules/ImportedMissingHeader/ImportedMissingHeader.fst
module ImportedMissingHeader where

import IHaveNoHeader

main : Int
main = double 2
